# MAS-bort

./: .gitignore  .gitmodules  Bort_MAS.pro  CMakeLists.txt  Dockerfile  build.py  compose.yaml  cs_rov.cpp  cs_rov.h  deploy.py  kx_pult.conf  rov_model.cpp  session_KX_Pult.conf
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: AH127Cprotocol.cpp.167A7403B7E0F3BB.idx  AH127Cprotocol.h.3A5E13CE3E4445EC.idx  bessel_function.tcc.71D16119959A2533.idx  beta_function.tcc.964040FF417B2D1A.idx  cmath.7CA64C238222D8AB.idx  configdata.cpp.FECF1604396AC4AB.idx  configdata.h.09EC616741CAF67D.idx  cs_rov.cpp.E36025032E0449A8.idx  cs_rov.h.F3C7F0FB26F2DF5E.idx  ell_integral.tcc.452993A8BB7D0C70.idx  exp_integral.tcc.9F014284D83D2809.idx  gamma.tcc.A641CDC6D36D1E8B.idx  hypergeometric.tcc.95FE3A4C4E5E1760.idx  (+33 more)
build-Bort_MAS-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: protocols.conf
build-Bort_MAS-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Bort_MAS-Desktop_Qt_5_15_2_MinGW_64_bit-Profile/.qtc_clangd/: compile_commands.json
build-Bort_MAS-Desktop_Qt_5_15_2_MinGW_64_bit-Release/.qtc_clangd/: compile_commands.json
build-protocol_bort_AUV-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
pult/: k_description.h  session_KX_Pult.conf
ros2/: .gitignore  Dockerfile  README.md  build.sh  compose.yaml
ros2/udp_publisher/: CMakeLists.txt  package.xml  udp_sender.py
ros2/udp_publisher/msg/: FromBort.msg  ToBort.msg
ros2/udp_publisher/src/: control.cpp  publisher.cpp  udp_client.h
settings/: settings.ini
(+142 files in other folders)
